--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:badge_background_color="@color/badge_text_color"
+            app:badgeBackgroundColor="@color/badge_background_color"
             />
 
     </android.support.design.widget.AppBarLayout>
