--- a/app/src/main/res/color/badge_background_color.xml
+++ b/app/src/main/res/color/badge_background_color.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="#ff0" android:state_selected="true" />
-    <item android:color="#f0f" android:state_selected="false" />
+    <item android:color="#8BC34A" android:state_selected="false" />
 </selector>
