--- a/badgedtablayout/src/main/res/layout/badged_tab.xml
+++ b/badgedtablayout/src/main/res/layout/badged_tab.xml
@@ -33,8 +33,8 @@
         android:minWidth="20dp"
         android:padding="3dp"
         android:singleLine="true"
-        android:text="131"
         android:textColor="@color/badge_text_color"
-        android:textSize="11sp" />
+        android:textSize="11sp"
+        android:visibility="gone" />
 
 </LinearLayout>
