-added icon support -added tab text change size functionality

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             app:badgeBackgroundColor="@color/badge_background_color"
             app:badgeTextSize="11sp"
-            />
+            app:tabIndicatorColor="#4f4" />
 
     </android.support.design.widget.AppBarLayout>
 
