--- a/badgedtablayout/src/main/res/layout/badged_tab.xml
+++ b/badgedtablayout/src/main/res/layout/badged_tab.xml
@@ -1,22 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textview_tab_title"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ellipsize="marquee"
         android:gravity="center"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:maxWidth="@dimen/tab_text_max_width"
-        android:singleLine="true"
-        android:text="Section 1sdassbsd kjasbdkjasbdkasjsajdsda"
-        android:textAllCaps="true" />
+        android:orientation="vertical">
 
+
+        <ImageView
+            android:id="@+id/imageview_tab_icon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/textview_tab_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="marquee"
+            android:gravity="center"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:maxWidth="@dimen/tab_text_max_width"
+            android:singleLine="true"
+            android:text="Section 1sdassbsd kjasbdkjasbdkasjsajdsda"
+            android:textAllCaps="true" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textview_tab_badge"
