--- a/badgedtablayout/src/main/res/layout/badged_tab.xml
+++ b/badgedtablayout/src/main/res/layout/badged_tab.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="horizontal">
 
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_gravity="center_vertical"
         android:orientation="vertical">
 
 
@@ -48,7 +49,7 @@
         android:padding="3dp"
         android:singleLine="true"
         android:textColor="@color/badge_text_color"
-        android:textSize="11sp"
+        android:textSize="@dimen/tab_text_size"
         android:visibility="gone" />
 
 </LinearLayout>
